syntax = "proto3";

package com.winsigns.investment.grpc;

option java_package = "com.winsigns.investment.grpc";

import "Instruction.proto";

service trade {
	rpc virtualDone(Instruction) returns (Instruction) {};
}